@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction
class ToDoList{

+ToDoList()
+getInstance() : ToDoList
+addEntry(Entry entry)
+List<Entry> getToDoList()
}
class AgendaUI{
-name: String;
-size: Size;
-area: double;
-greenSpace: GreenSpace

+RegisterGreenSpaceUI()
-requestData()
-requestName()
-requestArea()
-submitData()
-printGreenSpace()
}

class AgendaController{

    +RegisterGreenSpaceController()
    +RegisterGreenSpaceController(AuthenticationRepository authenticationRepository)
    +getGreenSpaceRepository() : GreenSpaceRepository
    -getAuthenticationRepository() : AuthenticationRepository
    +registerGreenSpace(String name, double area, GreenSpace.Size size ) : GreenSpace
}

class Repositories{
    - Repositories()
    + getInstance() : Repositories
    + getGreenSpaceRepository() : GreenSpaceRepository
}

class Organization{}
class Entry{}

AgendaUI .> AgendaController : controller
AgendaController ..> Repositories : repositories
Repositories --> ToDoList : list of entries
ToDoList <-down- AgendaController
Repositories -down-> "1" OrganizationRepositiry
OrganizationRepositiry "1" --> "1" Organization : has manager
AgendaController "1" --> Organization
Repositories --> Repositories: instance
Organization "1" --> "1" Entry : date
Organization "1" --> "1" ToDoList: has information

@enduml